--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>4.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.5</version>
+        </dependency>
+
 
     </dependencies>
 
